First commited as before_4377_rev1