@@ -15,16 +15,18 @@ import java.util.HashSet;
 import java.util.Set;
 import java.util.concurrent.locks.ReentrantLock;
 
-import org.eclipse.core.resources.IProject;
+import org.eclipse.core.resources.IFile;
 import org.eclipse.core.resources.IResource;
 import org.eclipse.core.resources.IResourceChangeEvent;
 import org.eclipse.core.resources.IResourceChangeListener;
-import org.eclipse.core.resources.IWorkspaceRoot;
+import org.eclipse.core.resources.IResourceDelta;
+import org.eclipse.core.resources.IResourceDeltaVisitor;
+import org.eclipse.core.resources.IWorkspaceRunnable;
 import org.eclipse.core.resources.ResourcesPlugin;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
-import org.eclipse.core.runtime.OperationCanceledException;
+import org.eclipse.core.runtime.NullProgressMonitor;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.egit.core.Activator;
@@ -33,7 +35,7 @@ import org.eclipse.egit.core.EclipseGitProgressTransformer;
 import org.eclipse.egit.core.IteratorService;
 import org.eclipse.egit.core.JobFamilies;
 import org.eclipse.egit.core.internal.trace.GitTraceLocation;
-import org.eclipse.egit.core.internal.util.ProjectUtil;
+import org.eclipse.egit.core.project.RepositoryMapping;
 import org.eclipse.jgit.events.IndexChangedEvent;
 import org.eclipse.jgit.events.IndexChangedListener;
 import org.eclipse.jgit.events.RefsChangedEvent;
@@ -44,6 +46,7 @@ import org.eclipse.jgit.lib.Repository;
 import org.eclipse.jgit.treewalk.WorkingTreeIterator;
 import org.eclipse.jgit.treewalk.filter.PathFilterGroup;
 import org.eclipse.osgi.util.NLS;
+import org.eclipse.team.core.Team;
 
 /**
  * This class caches the {@link IndexDiff} for a given repository. The cache
@@ -52,6 +55,8 @@ import org.eclipse.osgi.util.NLS;
  *
  */
 public class IndexDiffCacheEntry {
+
+	private static final String GITIGNORE_NAME = ".gitignore"; //$NON-NLS-1$
 
 	private static final int RESOURCE_LIST_UPDATE_LIMIT = 1000;
 
@@ -69,6 +74,15 @@ public class IndexDiffCacheEntry {
 	private IResourceChangeListener resourceChangeListener;
 
 	/**
+	 * Bit-mask describing interesting changes for IResourceChangeListener
+	 * events
+	 */
+	private static int INTERESTING_CHANGES = IResourceDelta.CONTENT
+			| IResourceDelta.MOVED_FROM | IResourceDelta.MOVED_TO
+			| IResourceDelta.OPEN | IResourceDelta.REPLACED
+			| IResourceDelta.TYPE;
+
+	/**
 	 * @param repository
 	 */
 	public IndexDiffCacheEntry(Repository repository) {
@@ -76,16 +90,16 @@ public class IndexDiffCacheEntry {
 		repository.getListenerList().addIndexChangedListener(
 				new IndexChangedListener() {
 					public void onIndexChanged(IndexChangedEvent event) {
-						scheduleReloadJob("IndexChanged"); //$NON-NLS-1$
+						scheduleReloadJob();
 					}
 				});
 		repository.getListenerList().addRefsChangedListener(
 				new RefsChangedListener() {
 					public void onRefsChanged(RefsChangedEvent event) {
-						scheduleReloadJob("RefsChanged"); //$NON-NLS-1$
+						scheduleReloadJob();
 					}
 				});
-		scheduleReloadJob("IndexDiffCacheEntry construction"); //$NON-NLS-1$
+		scheduleReloadJob();
 		createResourceChangeListener();
 	}
 
@@ -111,43 +125,10 @@ public class IndexDiffCacheEntry {
 	}
 
 	/**
-	 * This method starts a Job that refreshes all open projects related to the
-	 * repository and afterwards triggers the (asynchronous) recalculation of
-	 * the IndexDiff. This ensures that the IndexDiff calculation is not working
-	 * on out-dated resources.
-	 *
-	 */
-	public void refreshResourcesAndIndexDiff() {
-		String repositoryName = Activator.getDefault().getRepositoryUtil()
-				.getRepositoryName(repository);
-		String jobName = MessageFormat
-				.format(CoreText.IndexDiffCacheEntry_refreshingProjects,
-						repositoryName);
-		Job job = new Job(jobName) {
-
-			@Override
-			protected IStatus run(IProgressMonitor monitor) {
-				try {
-					IProject[] validOpenProjects = ProjectUtil
-							.getValidOpenProjects(repository);
-					ProjectUtil.refreshResources(validOpenProjects, monitor);
-				} catch (CoreException e) {
-					return Activator.error(e.getMessage(), e);
-				}
-				refresh();
-				return Status.OK_STATUS;
-			}
-
-		};
-		job.setRule(ResourcesPlugin.getWorkspace().getRoot());
-		job.schedule();
-	}
-
-	/**
 	 * Trigger a new index diff calculation manually
 	 */
 	public void refresh() {
-		scheduleReloadJob("Refresh called"); //$NON-NLS-1$
+		scheduleReloadJob();
 	}
 
 	/**
@@ -160,7 +141,7 @@ public class IndexDiffCacheEntry {
 		return indexDiffData;
 	}
 
-	private void scheduleReloadJob(final String trigger) {
+	private void scheduleReloadJob() {
 		if (reloadJob != null)
 			reloadJob.cancel();
 		if (!checkRepository())
@@ -168,7 +149,7 @@ public class IndexDiffCacheEntry {
 		reloadJob = new Job(getReloadJobName()) {
 			@Override
 			protected IStatus run(IProgressMonitor monitor) {
-				waitForWorkspaceLock(monitor);
+				waitForWorkspaceLock();
 				if (monitor.isCanceled())
 					return Status.CANCEL_STATUS;
 				lock.lock();
@@ -180,8 +161,9 @@ public class IndexDiffCacheEntry {
 					indexDiffData = new IndexDiffData(result);
 					if (GitTraceLocation.INDEXDIFFCACHE.isActive()) {
 						long time = System.currentTimeMillis() - startTime;
-						StringBuilder message = new StringBuilder(
-								getTraceMessage(time));
+						StringBuilder message = new StringBuilder(NLS.bind(
+								"Updated IndexDiffData in {0} ms\n", //$NON-NLS-1$
+								new Long(time)));
 						GitTraceLocation.getTrace().trace(
 								GitTraceLocation.INDEXDIFFCACHE.getLocation(),
 								message.append(indexDiffData.toString())
@@ -189,22 +171,17 @@ public class IndexDiffCacheEntry {
 					}
 					notifyListeners();
 					return Status.OK_STATUS;
-				} catch (IOException e) {
-					if (GitTraceLocation.INDEXDIFFCACHE.isActive())
+				} catch (RuntimeException e) {
+					if (GitTraceLocation.INDEXDIFFCACHE.isActive()) {
 						GitTraceLocation.getTrace().trace(
 								GitTraceLocation.INDEXDIFFCACHE.getLocation(),
 								"Calculating IndexDiff failed", e); //$NON-NLS-1$
+					}
+					scheduleReloadJob();
 					return Status.OK_STATUS;
 				} finally {
 					lock.unlock();
 				}
-			}
-
-			private String getTraceMessage(long time) {
-				return NLS
-						.bind("\nUpdated IndexDiffData in {0} ms\nReason: {1}\nRepository: {2}\n", //$NON-NLS-1$
-						new Object[] { Long.valueOf(time), trigger,
-								repository.getWorkTree().getName() });
 			}
 
 			@Override
@@ -226,37 +203,39 @@ public class IndexDiffCacheEntry {
 		return true;
 	}
 
-	private void waitForWorkspaceLock(IProgressMonitor monitor) {
+	private void waitForWorkspaceLock() {
 		// Wait for the workspace lock to avoid starting the calculation
 		// of an IndexDiff while the workspace changes (e.g. due to a
 		// branch switch).
 		// The index diff calculation jobs do not lock the workspace
 		// during execution to avoid blocking the workspace.
-		IWorkspaceRoot root = ResourcesPlugin.getWorkspace().getRoot();
 		try {
-			Job.getJobManager().beginRule(root, monitor);
-		} catch (OperationCanceledException e) {
-			return;
-		} finally {
-			Job.getJobManager().endRule(root);
+			ResourcesPlugin.getWorkspace().run(new IWorkspaceRunnable() {
+
+				public void run(IProgressMonitor monitor) throws CoreException {
+					// empty
+				}
+			}, new NullProgressMonitor());
+		} catch (CoreException e) {
+			throw new RuntimeException(e);
 		}
 	}
 
 	private void scheduleUpdateJob(final Collection<String> filesToUpdate,
-			final Collection<IResource> resourcesToUpdate) {
+			final Collection<IFile> fileResourcesToUpdate) {
 		if (!checkRepository())
 			return;
 		Job job = new Job(getReloadJobName()) {
 			@Override
 			protected IStatus run(IProgressMonitor monitor) {
-				waitForWorkspaceLock(monitor);
+				waitForWorkspaceLock();
 				if (monitor.isCanceled())
 					return Status.CANCEL_STATUS;
 				lock.lock();
 				try {
 					long startTime = System.currentTimeMillis();
 					IndexDiffData result = calcIndexDiffData(monitor,
-							getName(), filesToUpdate, resourcesToUpdate);
+							getName(), filesToUpdate, fileResourcesToUpdate);
 					if (monitor.isCanceled())
 						return Status.CANCEL_STATUS;
 					indexDiffData = result;
@@ -265,8 +244,8 @@ public class IndexDiffCacheEntry {
 						StringBuilder message = new StringBuilder(
 								NLS.bind(
 										"Updated IndexDiffData based on resource list (length = {0}) in {1} ms\n", //$NON-NLS-1$
-										Integer.valueOf(resourcesToUpdate
-												.size()), Long.valueOf(time)));
+										new Integer(fileResourcesToUpdate
+												.size()), new Long(time)));
 						GitTraceLocation.getTrace().trace(
 								GitTraceLocation.INDEXDIFFCACHE.getLocation(),
 								message.append(indexDiffData.toString())
@@ -274,11 +253,13 @@ public class IndexDiffCacheEntry {
 					}
 					notifyListeners();
 					return Status.OK_STATUS;
-				} catch (IOException e) {
-					if (GitTraceLocation.INDEXDIFFCACHE.isActive())
+				} catch (RuntimeException e) {
+					if (GitTraceLocation.INDEXDIFFCACHE.isActive()) {
 						GitTraceLocation.getTrace().trace(
 								GitTraceLocation.INDEXDIFFCACHE.getLocation(),
 								"Calculating IndexDiff failed", e); //$NON-NLS-1$
+					}
+					scheduleReloadJob();
 					return Status.OK_STATUS;
 				} finally {
 					lock.unlock();
@@ -297,19 +278,23 @@ public class IndexDiffCacheEntry {
 
 	private IndexDiffData calcIndexDiffData(IProgressMonitor monitor,
 			String jobName, Collection<String> filesToUpdate,
-			Collection<IResource> resourcesToUpdate) throws IOException {
+			Collection<IFile> fileResourcesToUpdate) {
 		EclipseGitProgressTransformer jgitMonitor = new EclipseGitProgressTransformer(
 				monitor);
-
-		WorkingTreeIterator iterator = IteratorService
-				.createInitialIterator(repository);
-		IndexDiff diffForChangedResources = new IndexDiff(repository,
-				Constants.HEAD, iterator);
-		diffForChangedResources.setFilter(PathFilterGroup
-				.createFromStrings(filesToUpdate));
-		diffForChangedResources.diff(jgitMonitor, 0, 0, jobName);
+		final IndexDiff diffForChangedResources;
+		try {
+			WorkingTreeIterator iterator = IteratorService
+					.createInitialIterator(repository);
+			diffForChangedResources = new IndexDiff(repository, Constants.HEAD,
+					iterator);
+			diffForChangedResources.setFilter(PathFilterGroup
+					.createFromStrings(filesToUpdate));
+			diffForChangedResources.diff(jgitMonitor, 0, 0, jobName);
+		} catch (IOException e) {
+			throw new RuntimeException(e);
+		}
 		return new IndexDiffData(indexDiffData, filesToUpdate,
-				resourcesToUpdate, diffForChangedResources);
+				fileResourcesToUpdate, diffForChangedResources);
 	}
 
 	private void notifyListeners() {
@@ -319,24 +304,22 @@ public class IndexDiffCacheEntry {
 					.toArray(new IndexDiffChangedListener[listeners.size()]);
 		}
 		for (int i = 0; i < tmpListeners.length; i++)
-			try {
-				tmpListeners[i].indexDiffChanged(repository, indexDiffData);
-			} catch (RuntimeException e) {
-				Activator.logError(
-						"Exception occured in an IndexDiffChangedListener", e); //$NON-NLS-1$
-			}
+			tmpListeners[i].indexDiffChanged(repository, indexDiffData);
 	}
 
-	private IndexDiff calcIndexDiff(IProgressMonitor monitor, String jobName)
-			throws IOException {
+	private IndexDiff calcIndexDiff(IProgressMonitor monitor, String jobName) {
 		EclipseGitProgressTransformer jgitMonitor = new EclipseGitProgressTransformer(
 				monitor);
 
 		IndexDiff newIndexDiff;
-		WorkingTreeIterator iterator = IteratorService
-				.createInitialIterator(repository);
-		newIndexDiff = new IndexDiff(repository, Constants.HEAD, iterator);
-		newIndexDiff.diff(jgitMonitor, 0, 0, jobName);
+		try {
+			WorkingTreeIterator iterator = IteratorService
+					.createInitialIterator(repository);
+			newIndexDiff = new IndexDiff(repository, Constants.HEAD, iterator);
+			newIndexDiff.diff(jgitMonitor, 0, 0, jobName);
+		} catch (IOException e) {
+			throw new RuntimeException(e);
+		}
 		return newIndexDiff;
 	}
 
@@ -349,25 +332,67 @@ public class IndexDiffCacheEntry {
 	private void createResourceChangeListener() {
 		resourceChangeListener = new IResourceChangeListener() {
 			public void resourceChanged(IResourceChangeEvent event) {
-				GitResourceDeltaVisitor visitor = new GitResourceDeltaVisitor(repository);
+				final Collection<String> filesToUpdate = new HashSet<String>();
+				final Collection<IFile> fileResourcesToUpdate = new HashSet<IFile>();
+				final boolean[] gitIgnoreChanged = new boolean[1];
+				gitIgnoreChanged[0] = false;
+
 				try {
-					event.getDelta().accept(visitor);
+					event.getDelta().accept(new IResourceDeltaVisitor() {
+						public boolean visit(IResourceDelta delta)
+								throws CoreException {
+							final IResource resource = delta.getResource();
+							// Don't include ignored resources
+							if (Team.isIgnoredHint(resource))
+								return false;
+
+							// If the file has changed but not in a way that we
+							// care about (e.g. marker changes to files) then
+							// ignore
+							if (delta.getKind() == IResourceDelta.CHANGED
+									&& (delta.getFlags() & INTERESTING_CHANGES) == 0)
+								return true;
+
+							// skip any non-FILE resources
+							if (resource.getType() != IResource.FILE)
+								return true;
+
+							// If the resource is not part of a project under
+							// Git revision control
+							final RepositoryMapping mapping = RepositoryMapping
+									.getMapping(resource);
+							if (mapping == null
+									|| mapping.getRepository() != repository)
+								// Ignore the change
+								return true;
+
+							if (resource.getName().equals(GITIGNORE_NAME)) {
+								gitIgnoreChanged[0] = true;
+								return false;
+							}
+
+							String repoRelativePath = mapping
+									.getRepoRelativePath(resource);
+							filesToUpdate.add(repoRelativePath);
+							fileResourcesToUpdate.add((IFile) resource);
+
+							return true;
+						}
+					});
 				} catch (CoreException e) {
 					Activator.logError(e.getMessage(), e);
 					return;
 				}
-				Collection<String> filesToUpdate = visitor.getFilesToUpdate();
-				if (visitor.getGitIgnoreChanged())
-					scheduleReloadJob("A .gitignore changed"); //$NON-NLS-1$
-				else if (indexDiffData == null)
-					scheduleReloadJob("Resource changed, no diff available"); //$NON-NLS-1$
+
+				if (gitIgnoreChanged[0] || indexDiffData == null)
+					scheduleReloadJob();
 				else if (!filesToUpdate.isEmpty())
 					if (filesToUpdate.size() < RESOURCE_LIST_UPDATE_LIMIT)
-						scheduleUpdateJob(filesToUpdate, visitor.getResourcesToUpdate());
+						scheduleUpdateJob(filesToUpdate, fileResourcesToUpdate);
 					else
 						// Calculate new IndexDiff if too many resources changed
 						// This happens e.g. when a project is opened
-						scheduleReloadJob("Too many resources changed"); //$NON-NLS-1$
+						scheduleReloadJob();
 			}
 
 		};
